objects/Default_Team__c.object
<CustomObject>
    <description>Used for Quote and MSPA Team Management.</description>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filter_Criteria__c</fullName>
        <inlineHelpText>This field is used for filtering based on the sales district.</inlineHelpText>
        <label>Filter Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Role__c</fullName>
        <label>Member Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Default_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Default Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>Member_Role__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Access_Level__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Default Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>